--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -145,8 +145,9 @@ $input-color--disabled: $text-color--disabled;
 $input-bg-color--disabled: darken($input-bg-color, 5%);
 
 //modal
-$modal-shadow-color: rgba(darken($bg-color, 20%), 0.5);
+$modal-mask-bg-color: rgba(darken($bg-color, 20%), 0.5);
 $modal-bg-color: $bg-color;
+$modal-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
 $modal-close-color: lighten($text-color, 10%);
 $modal-close-color--hover: darken($text-color, 10%);
 
