--- a/assets/scss/mixins.scss
+++ b/assets/scss/mixins.scss
@@ -1,15 +1,9 @@
 @mixin clearfix() {
-  zoom: 1;
-  &:before,
+  *zoom: 1;
   &:after {
     content: "";
     display: table;
-  }
-  &:after {
     clear: both;
-    visibility: hidden;
-    font-size: 0;
-    height: 0;
   }
 }
 
