--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -13,7 +13,7 @@ $text-color--secondary: lighten($text-color, 20%);
 $text-color--disabled: #ccc;
 
 //$bg-color: #fff;
-$bg-color: rgba(#fff,0.9);
+$bg-color: rgba(#fff, 0.9);
 $border-color: #dddee1;
 
 //border
@@ -143,6 +143,12 @@ $badge-border-color: #fff;
 
 //editor
 $editor-bg-color: $bg-color;
+$editor-toolbar-color: $text-color;
+$editor-toolbar-color--hover: $primary-color;
+$editor-toolbar-bg-color--hover: darken($editor-bg-color, 10%);
+$editor-toolbar-popup-shadow: 0 1px 3px rgba(0, 0, 0, .3);
+$editor-preview-bg-color: darken($bg-color, 5%);
+$editor-popup-color:darken($bg-color, 5%);
 
 //input
 $input-bg-color: $bg-color;
