--- a/assets/scss/public.scss
+++ b/assets/scss/public.scss
@@ -1,6 +1,7 @@
 @import "../css/normalize.css";
 @import "application";
 @import "mixins";
+@import "../font-awesome-4.7.0/css/font-awesome.min.css";
 
 html {
   font-size: 14px;
